# mochibot

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  OBSERVERS.md  README.md  README.zh-CN.md  SKILLS.md  docker-compose.yml  oura_auth.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  start.py  update.bat  weixin_auth.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: SKILL_SPEC.md  getting-started.md
docs/skill_template/: OBSERVATION.md  SKILL.md  handler.py  observer.py  queries.py
examples/: README.md
mochi/: __init__.py  _version.py  ai_client.py  checkup_core.py  config.py  db.py  diary.py  error_buffer.py  heartbeat.py  knowledge_graph.py  llm.py  main.py  memory_engine.py  model_health.py  model_pool.py  oura_client.py  prompt_loader.py  reminder_timer.py  runtime_state.py  shutdown.py  skill_config_resolver.py  tool_policy.py  tool_router.py
mochi/admin/: __main__.py  admin_crypto.py  admin_db.py  admin_env.py  admin_server.py  index.html  migration.py  migration_routes.py  prompt_dump_routes.py
mochi/observers/: __init__.py  base.py
mochi/prompts/: bedtime_tidy.md  kg_extract.md  memory_extract.md  personality.md  proactive_chat.md  reminder_deliver.md  report_evening.md  report_morning.md  think_system.md
prompts/: bedtime_tidy.md  kg_extract.md  memory_extract.md  proactive_chat.md  system_chat.md  think_system.md
scripts/: dump_prompt.py  dump_think_prompt.py  e2e_habit_personas.py  e2e_notes_gating.py  e2e_prior_attempts.py
tests/: conftest.py  test_admin_db.py  test_ai_client.py  test_auto_recall.py  test_config.py  test_conv_summary.py  test_db.py  test_diary.py  test_diary_refresh_e2e.py  test_embedding.py  test_error_buffer.py  test_habit_handler.py  test_habit_logic.py  test_heartbeat.py  test_heartbeat_format_silence.py  test_knowledge_graph.py  test_llm.py  test_llm_json_mode.py  test_logical_today_consistency.py  test_logical_today_lint.py  test_maintenance_handler.py  test_meal_handler.py  test_memory_engine.py  test_memory_handler.py  test_migration.py  test_note_handler.py  test_observers.py  test_oura.py  test_prompt_loader.py  test_reminder_handler.py  test_restart.py  test_runtime_state.py  test_skill_config_resolver.py  test_skill_diary_refresh.py  test_skills.py  test_sticker_handler.py  test_telegram_commands.py  test_todo_handler.py  test_tool_policy.py  test_tool_router.py  (+3 more)
(+89 files in other folders)
