[project]
name = "mochibot"
version = "0.2.0"
description = "A lightweight AI companion framework with autonomous heartbeat, layered memory, and modular skills."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "agent", "companion", "chatbot", "memory", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.30.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "ddgs>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
vectordb = ["sqlite-vec>=0.1.6"]
wechat = ["aiohttp>=3.9"]
all = ["anthropic>=0.25.0", "sqlite-vec>=0.1.6", "aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/shikidmsh-rgb/mochibot"
Repository = "https://github.com/shikidmsh-rgb/mochibot"
Issues = "https://github.com/shikidmsh-rgb/mochibot/issues"
